<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment1.Page1Fragment">


    <ImageView
        android:id="@+id/img_image1"
        android:layout_width="192dp"
        android:layout_height="214dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/img_page1"
        android:src="@drawable/landing_page1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/itim"
        android:gravity="center"
        android:text="@string/page1_desc1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/itim"
        android:gravity="center"
        android:text="@string/page1_desc2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>